# pyfs

./: README.md  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
src/pyfs/: __init__.py  exceptions.py  filesystem.py  inode.py
test/: test_file_system.py
