[metadata]
name = pyfs
version = 0.0.1
description = A toy, in-memory file system in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daneah/pyfs
author = Dane Hillard
author_email = "Dane Hillard <github@danehillard.com>"
license = MIT
license_file = LICENSE
project_urls =
    Source=https://github.com/daneah/pyfs
    Tracker=https://github.com/daneah/pyfs/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: System :: Filesystems
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    test*

######################
# Tool configuration #
######################

[tox:tox]
envlist = py310
isolated_build = True

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}

[tool:pytest]
testpaths = test
addopts = -ra -q --strict-markers --cov
xfail_strict = True

[coverage:run]
branch = True
source = pyfs
omit =
    test/*
    setup.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = True
skip_empty = True

[coverage:paths]
source =
    src
    .tox/*/site-packages

[testenv:typecheck]
deps =
    mypy
    pytest
commands =
    mypy {posargs:src test}

[mypy]
python_version = 3.10
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}
